--- a/index.html
+++ b/index.html
@@ -1,52 +1,98 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calendário com Feriados e Lembretes</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Calendário Responsivo</title>
   <style>
-    /* Estilos base e responsivos */
+    :root {
+      --bg-color: #f8f9fa;
+      --card-bg: #42a5f5;
+      --header-bg: rgba(0, 0, 0, 0.2);
+      --text-color: #fff;
+      --hover-bg: rgba(255, 255, 255, 0.3);
+      --current-day: #ff7043;
+      --holiday-bg: #ffeb3b;
+      --modal-bg: white;
+      --weekend-bg: rgba(255, 255, 255, 0.1);
+    }
+
+    .dark-mode {
+      --bg-color: #121212;
+      --card-bg: #1e1e2f;
+      --header-bg: rgba(255, 255, 255, 0.05);
+      --text-color: #fff;
+      --hover-bg: rgba(255, 255, 255, 0.1);
+      --current-day: #ef5350;
+      --holiday-bg: #ffee58;
+      --modal-bg: #2c2c3e;
+      --weekend-bg: rgba(255, 255, 255, 0.1);
+    }
+
     body {
       font-family: 'Arial', sans-serif;
+      background-color: var(--bg-color);
+      color: var(--text-color);
+      margin: 0;
       display: flex;
       justify-content: center;
       align-items: center;
+      padding: 20px;
       min-height: 100vh;
-      margin: 0;
-      background-color: #f8f9fa;
+      transition: background-color 0.3s, color 0.3s;
     }
 
     .calendario {
       width: 100%;
       max-width: 800px;
-      background: linear-gradient(135deg, #42a5f5, #1e88e5);
+      background: var(--card-bg);
       border-radius: 25px;
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
       overflow: hidden;
-      color: white;
     }
 
     .calendario-header {
       text-align: center;
-      padding: 30px;
+      padding: 20px;
       font-size: 2em;
       font-weight: bold;
-      background: rgba(0, 0, 0, 0.2);
+      background: var(--header-bg);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .calendario-header span {
+      flex: 1;
     }
 
     .calendario-header button {
       background: none;
       border: none;
-      color: white;
-      font-size: 2em;
-      font-weight: bold;
-      margin: 0 20px;
+      color: var(--text-color);
+      font-size: 1.5em;
+      margin: 0 10px;
       cursor: pointer;
       transition: transform 0.2s;
     }
 
     .calendario-header button:hover {
-      transform: scale(1.3);
+      transform: scale(1.2);
+    }
+
+    .modo-escuro-btn {
+      font-size: 0.6em;
+      padding: 6px 12px;
+      border-radius: 8px;
+      border: none;
+      cursor: pointer;
+      background: #00000050;
+      color: var(--text-color);
+      transition: background 0.3s;
+    }
+
+    .modo-escuro-btn:hover {
+      background: #00000080;
     }
 
     table {
@@ -57,35 +103,32 @@
     th, td {
       padding: 15px;
       text-align: center;
-      border: 1px solid rgba(255, 255, 255, 0.3);
+      border: 1px solid rgba(255, 255, 255, 0.2);
     }
 
     th {
-      font-size: 1.2em;
       text-transform: uppercase;
-      opacity: 0.8;
+      font-size: 1em;
+      opacity: 0.9;
     }
 
     td {
-      font-size: 1.2em;
       cursor: pointer;
       transition: background-color 0.3s, color 0.3s;
     }
 
     td:hover {
-      background-color: rgba(255, 255, 255, 0.3);
-      color: #333;
+      background-color: var(--hover-bg);
     }
 
     .dia-atual {
-      background-color: #ff7043;
-      color: white;
-      font-weight: bold;
+      background-color: var(--current-day);
       border-radius: 50%;
+      font-weight: bold;
     }
 
     .feriado {
-      background-color: #ffeb3b;
+      background-color: var(--holiday-bg);
       color: #333;
       font-weight: bold;
       position: relative;
@@ -103,7 +146,21 @@
       border-radius: 5px;
       font-size: 0.8em;
       white-space: nowrap;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    }
+
+    .fim-de-semana {
+      background-color: var(--weekend-bg);
+    }
+
+    #modalBackdrop {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: rgba(0, 0, 0, 0.5);
+      z-index: 999;
     }
 
     #lembreteModal {
@@ -112,20 +169,22 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background: white;
+      background: var(--modal-bg);
+      color: black;
       padding: 20px;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
       border-radius: 10px;
-      text-align: center;
       z-index: 1000;
+      width: 90%;
+      max-width: 400px;
+      text-align: center;
     }
 
     #lembreteModal input {
       width: 100%;
       padding: 10px;
       margin: 10px 0;
-      border: 1px solid #ccc;
       border-radius: 5px;
+      border: 1px solid #ccc;
     }
 
     #lembreteModal button {
@@ -134,22 +193,19 @@
       color: white;
       border: none;
       border-radius: 5px;
-      cursor: pointer;
+      margin: 5px;
     }
 
-    #lembreteModal button:hover {
-      background: #1e88e5;
-    }
+    @media (max-width: 600px) {
+      .calendario-header {
+        flex-direction: column;
+        gap: 10px;
+      }
 
-    #modalBackdrop {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.5);
-      z-index: 999;
+      th, td {
+        padding: 10px;
+        font-size: 0.9em;
+      }
     }
   </style>
 </head>
@@ -159,17 +215,12 @@
       <button onclick="mudarMes(-1)">&#8592;</button>
       <span id="mes-ano">Carregando...</span>
       <button onclick="mudarMes(1)">&#8594;</button>
+      <button class="modo-escuro-btn" onclick="alternarModoEscuro()">🌙</button>
     </div>
     <table>
       <thead>
         <tr>
-          <th>Dom</th>
-          <th>Seg</th>
-          <th>Ter</th>
-          <th>Qua</th>
-          <th>Qui</th>
-          <th>Sex</th>
-          <th>Sáb</th>
+          <th>Dom</th><th>Seg</th><th>Ter</th><th>Qua</th><th>Qui</th><th>Sex</th><th>Sáb</th>
         </tr>
       </thead>
       <tbody id="dias-calendario"></tbody>
@@ -179,7 +230,7 @@
   <div id="modalBackdrop" onclick="fecharModal()"></div>
   <div id="lembreteModal">
     <h3>Adicionar Lembrete</h3>
-    <input type="text" id="lembreteInput" placeholder="Escreva seu lembrete">
+    <input type="text" id="lembreteInput" placeholder="Escreva seu lembrete" />
     <button onclick="salvarLembrete()">Salvar</button>
     <button onclick="fecharModal()">Cancelar</button>
   </div>
@@ -187,106 +238,122 @@
   <script>
     let dataAtual = new Date();
     const feriados = {
-        '1-1': 'Ano Novo',
-        '25-12': 'Natal',
-        '7-9': 'Independência do Brasil',
-        '15-11': 'Proclamação da República',
-        '1-5': 'Dia do Trabalho',
-        '12-10': 'Nossa Senhora Aparecida',
-        '2-11': 'Finados',
-        '25-12': 'Natal'
+      '1-1': 'Ano Novo',
+      '25-12': 'Natal',
+      '7-9': 'Independência do Brasil',
+      '15-11': 'Proclamação da República',
+      '1-5': 'Dia do Trabalho',
+      '12-10': 'Nossa Senhora Aparecida',
+      '2-11': 'Finados'
     };
 
-    let lembretes = {};
+    let lembretes = JSON.parse(localStorage.getItem('lembretes')) || {};
 
     function getNomeMes(mes) {
-      const meses = [
-        'Janeiro', 'Fevereiro', 'Março', 'Abril',
-        'Maio', 'Junho', 'Julho', 'Agosto',
-        'Setembro', 'Outubro', 'Novembro', 'Dezembro'
-      ];
-      return meses[mes];
+      const nomes = ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho',
+                     'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro'];
+      return nomes[mes];
     }
 
     function renderCalendario() {
-      const mesAtual = dataAtual.getMonth();
-      const anoAtual = dataAtual.getFullYear();
-      const diaAtual = new Date().getDate();
+      const mes = dataAtual.getMonth();
+      const ano = dataAtual.getFullYear();
+      const hoje = new Date();
 
-      const headerElement = document.getElementById('mes-ano');
-      headerElement.textContent = `${getNomeMes(mesAtual)} ${anoAtual}`;
-
-      const primeiroDiaDoMes = new Date(anoAtual, mesAtual, 1).getDay();
-      const ultimoDiaDoMes = new Date(anoAtual, mesAtual + 1, 0).getDate();
-
+      document.getElementById('mes-ano').textContent = `${getNomeMes(mes)} ${ano}`;
       const tbody = document.getElementById('dias-calendario');
       tbody.innerHTML = '';
 
-      let linha = document.createElement('tr');
-      let diaContador = 1;
+      const primeiroDia = new Date(ano, mes, 1).getDay();
+      const diasNoMes = new Date(ano, mes + 1, 0).getDate();
 
-      for (let i = 0; i < primeiroDiaDoMes; i++) {
+      let linha = document.createElement('tr');
+
+      for (let i = 0; i < primeiroDia; i++) {
         linha.appendChild(document.createElement('td'));
       }
 
-      while (diaContador <= ultimoDiaDoMes) {
+      for (let dia = 1; dia <= diasNoMes; dia++) {
         if (linha.children.length === 7) {
           tbody.appendChild(linha);
           linha = document.createElement('tr');
         }
 
-        const coluna = document.createElement('td');
-        coluna.textContent = diaContador;
-        coluna.onclick = () => abrirModal(diaContador, mesAtual + 1, anoAtual);
+        const td = document.createElement('td');
+        td.textContent = dia;
 
-        const chaveFeriado = `${diaContador}-${mesAtual + 1}`;
-        if (feriados[chaveFeriado]) {
-          coluna.classList.add('feriado');
-          coluna.setAttribute('data-feriado', feriados[chaveFeriado]);
+        const data = `${dia}-${mes + 1}-${ano}`;
+        td.onclick = () => abrirModal(data);
+
+        if (`${dia}-${mes + 1}` in feriados) {
+          td.classList.add('feriado');
+          td.setAttribute('data-feriado', feriados[`${dia}-${mes + 1}`]);
         }
 
-        if (diaContador === diaAtual &&
-            mesAtual === new Date().getMonth() &&
-            anoAtual === new Date().getFullYear()) {
-          coluna.classList.add('dia-atual');
+        const diaSemana = new Date(ano, mes, dia).getDay();
+        if (diaSemana === 0 || diaSemana === 6) {
+          td.classList.add('fim-de-semana');
         }
 
-        linha.appendChild(coluna);
-        diaContador++;
+        if (
+          dia === hoje.getDate() &&
+          mes === hoje.getMonth() &&
+          ano === hoje.getFullYear()
+        ) {
+          td.classList.add('dia-atual');
+        }
+
+        linha.appendChild(td);
       }
 
-      if (linha.children.length > 0) {
-        tbody.appendChild(linha);
-      }
+      if (linha.children.length > 0) tbody.appendChild(linha);
     }
 
-    function mudarMes(mudanca) {
-      dataAtual.setMonth(dataAtual.getMonth() + mudanca);
+    function mudarMes(valor) {
+      dataAtual.setMonth(dataAtual.getMonth() + valor);
       renderCalendario();
     }
 
-    function abrirModal(dia, mes, ano) {
-      const data = `${dia}-${mes}-${ano}`;
+    function abrirModal(data) {
       document.getElementById('modalBackdrop').style.display = 'block';
       document.getElementById('lembreteModal').style.display = 'block';
-      document.getElementById('lembreteInput').dataset.date = data;
-      document.getElementById('lembreteInput').value = lembretes[data] || '';
-    }
-
-    function salvarLembrete() {
-      const data = document.getElementById('lembreteInput').dataset.date; // Obtemos a data associada ao lembrete
-      const lembrete = document.getElementById('lembreteInput').value; // Obtemos o texto do lembrete
-      lembretes[data] = lembrete; // Salvamos o lembrete associado à data
-      fecharModal(); // Fechamos o modal
-      alert(`Lembrete para ${data} salvo com sucesso!`); // Mensagem de confirmação ao usuário
+      const input = document.getElementById('lembreteInput');
+      input.dataset.date = data;
+      input.value = lembretes[data] || '';
     }
 
     function fecharModal() {
-      document.getElementById('modalBackdrop').style.display = 'none'; // Esconde o fundo
-      document.getElementById('lembreteModal').style.display = 'none'; // Fecha o modal
+      document.getElementById('modalBackdrop').style.display = 'none';
+      document.getElementById('lembreteModal').style.display = 'none';
     }
 
-    document.addEventListener('DOMContentLoaded', renderCalendario); // Renderiza o calendário ao carregar a página
+    function salvarLembrete() {
+      const input = document.getElementById('lembreteInput');
+      const data = input.dataset.date;
+      const texto = input.value.trim();
+      if (texto) {
+        lembretes[data] = texto;
+      } else {
+        delete lembretes[data];
+      }
+      localStorage.setItem('lembretes', JSON.stringify(lembretes));
+      fecharModal();
+      alert('Lembrete salvo com sucesso!');
+    }
+
+    function alternarModoEscuro() {
+      document.body.classList.toggle('dark-mode');
+      localStorage.setItem('modoEscuro', document.body.classList.contains('dark-mode'));
+    }
+
+    window.addEventListener('DOMContentLoaded', () => {
+      if (localStorage.getItem('modoEscuro') === 'true') {
+        document.body.classList.add('dark-mode');
+      }
+      renderCalendario();
+    });
   </script>
 </body>
 </html>
+
+    
